<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/composeName"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:label="@string/composeName" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="ONCancel"
        android:text="@string/button1" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:onClick="ONClick"
        android:text="@string/button2" />

    <ImageView
        android:id="@+id/userImage"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button1"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/userImage"
        android:layout_toRightOf="@+id/button1"
        android:text="@string/foo_label"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/userScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/userImage"
        android:layout_alignLeft="@+id/userName"
        android:text="@string/userScreenName"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:ems="22"
        android:hint=" upto 160 characters"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>
